--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Flask-Script==0.3.3
 Jinja2==2.6
 SQLAlchemy==0.7.8
 Werkzeug==0.8.3
-psycopg2==2.4.5
+#psycopg2==2.4.5
 
 simplejson==2.6.1
 pytz==2012d
